Fix syntax error in bower package

--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,7 @@
     "injected"
   ],
   "authors": [
-    { "name": "Uzair Farooq", "email": "uzair.farooq@outlook.com" },
+    { "name": "Uzair Farooq", "email": "uzair.farooq@outlook.com" }
   ],
   "repository": {
     "type": "git",
