--- a/package.json
+++ b/package.json
@@ -16,9 +16,14 @@
   "keywords": [
     "jquery",
     "javascript",
-    "browser",
-    "library",
-    "js"
+    "js",
+    "watch",
+    "dynamic",
+    "creation",
+    "new",
+    "element",
+    "insertion",
+    "listen"
   ],
   "author": "Uzair Farooq <uzair.farooq@outlook.com>",
   "license": "MIT",
